@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-06-04 Tue 12:21 -->
+<!-- 2019-06-04 Tue 12:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>THERMOS Changelog</title>
@@ -19,8 +19,9 @@
 <ul>
 <li><a href="#org1469dae">1. Version 5</a>
 <ul>
-<li><a href="#orgd17a58f">1.1. 17 May 2019</a></li>
-<li><a href="#org0add898">1.2. 15 May 2019</a></li>
+<li><a href="#org0d73f49">1.1. 04 June 2019</a></li>
+<li><a href="#orgd17a58f">1.2. 17 May 2019</a></li>
+<li><a href="#org0add898">1.3. 15 May 2019</a></li>
 </ul>
 </li>
 </ul>
@@ -31,9 +32,20 @@
 <h2 id="org1469dae"><span class="section-number-2">1</span> Version 5</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgd17a58f" class="outline-3">
-<h3 id="orgd17a58f"><span class="section-number-3">1.1</span> 17 May 2019</h3>
+<div id="outline-container-org0d73f49" class="outline-3">
+<h3 id="org0d73f49"><span class="section-number-3">1.1</span> 04 June 2019</h3>
 <div class="outline-text-3" id="text-1-1">
+<ul class="org-ul">
+<li>Added some documentation about use of user data in the CSE thermos installation.</li>
+<li>Switched to an azimuthal equidistant projection for connector creation.
+This should make the connectors more sensible.</li>
+<li>Added a tool for introducing new connections into a problem.</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgd17a58f" class="outline-3">
+<h3 id="orgd17a58f"><span class="section-number-3">1.2</span> 17 May 2019</h3>
+<div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li>Wrote some more documentation</li>
 <li>Improved the display of solution finances to include connection costs</li>
@@ -43,8 +55,8 @@
 </div>
 
 <div id="outline-container-org0add898" class="outline-3">
-<h3 id="org0add898"><span class="section-number-3">1.2</span> 15 May 2019</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="org0add898"><span class="section-number-3">1.3</span> 15 May 2019</h3>
+<div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li>Improved the documentation system</li>
 <li>Modified map creation wizard so that an input heat demand of zero is respected</li>
